fix overflow during loosing on mobile

--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -12,6 +12,7 @@ body {
     min-height: 100vh;
     padding: 3vh 30px 5vh;
     background: radial-gradient(at top, $radial-gradient);
+    overflow-x: hidden;
 
     @include mq(md) {
         overflow: hidden;
@@ -103,7 +104,7 @@ body {
     height: 50%;
     aspect-ratio: 313/278;
     margin: 0 auto;
-    background-image: url('images/bg-triangle.svg');
+    background-image: url('../images/bg-triangle.svg');
     background-position: center;
     background-repeat: none;
     background-size: cover;
@@ -153,15 +154,15 @@ body {
     pointer-events: none;
 
     &--rock {
-        background-image: url('images/icon-rock.svg');
+        background-image: url('../images/icon-rock.svg');
     }
 
     &--paper {
-        background-image: url('images/icon-paper.svg');
+        background-image: url('../images/icon-paper.svg');
     }
 
     &--scissors {
-        background-image: url('images/icon-scissors.svg');
+        background-image: url('../images/icon-scissors.svg');
     }
 }
 
@@ -327,15 +328,15 @@ body {
 
 
     &--rock {
-        background-image: url('images/icon-rock.svg');
+        background-image: url('../images/icon-rock.svg');
     }
 
     &--paper {
-        background-image: url('images/icon-paper.svg');
+        background-image: url('../images/icon-paper.svg');
     }
 
     &--scissors {
-        background-image: url('images/icon-scissors.svg');
+        background-image: url('../images/icon-scissors.svg');
     }
 }
 
@@ -504,7 +505,7 @@ body {
     height: 30px;
     border: 0;
     background-color: transparent;
-    background-image: url('images/icon-close.svg');
+    background-image: url('../images/icon-close.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
